--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+sdf.glsl
+Transvoxel.cpp
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 build*
