--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(Animus)
+project(AnimationPlayer)
 
 set(CMAKE_PREFIX_PATH "/home/will/.local/mambaforge/envs/cxx")
 include_directories(/home/will/.local/mambaforge/envs/cxx/include)
@@ -10,9 +10,9 @@ find_package(glm   REQUIRED)
 find_package(Boost REQUIRED)
 
 add_definitions(-DGLFW_INCLUDE_NONE)
-file(COPY base.frag base.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#file(COPY base.frag base.glsl DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(${PROJECT_NAME} main.cpp base.frag base.glsl sdf.glsl)
+add_executable(${PROJECT_NAME} main.cpp base.frag base.glsl)
 target_link_libraries(${PROJECT_NAME} glfw glad)
 target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
