--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,5 +17,5 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_link_libraries(${PROJECT_NAME} glfw glad openal Common)
 target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(Common SHARED common.cpp common.glsl base.frag base.glsl line.glsl)
+add_library(Common SHARED common.cpp common.glsl base.frag base.glsl line.glsl bone.glsl)
 add_library(Module SHARED module.cpp)
