--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.png
+
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 build*
