--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -5,7 +5,7 @@ project(AnimationPlayer)
 # include_directories(${CMAKE_INCLUDE_PATH})
 # find_package(PhysX REQUIRED)
 
-set(CMAKE_PREFIX_PATH /home/ziji/.local/micromamba/envs/cxx)
+set(CMAKE_PREFIX_PATH /home/edwde/.local/micromamba/envs/cxx)
 link_directories(${CMAKE_PREFIX_PATH}/lib)
 add_definitions(-DGLFW_INCLUDE_NONE)
 find_package(glfw3 REQUIRED)
@@ -24,5 +24,5 @@ add_executable(
 target_link_libraries(${PROJECT_NAME} glfw glad dl)
 target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(Module SHARED module.cpp common.cpp common.h)
+add_library(Module SHARED module.cpp ikrig.cpp common.cpp common.h)
 target_include_directories(Module PUBLIC ${CMAKE_PREFIX_PATH}/include)
