--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -5,8 +5,7 @@ project(AnimationPlayer)
 # include_directories(${CMAKE_INCLUDE_PATH})
 # find_package(PhysX REQUIRED)
 
-set(CMAKE_PREFIX_PATH /home/edwde/.local/micromamba/envs/cxx)
-link_directories(${CMAKE_PREFIX_PATH}/lib)
+set(CMAKE_PREFIX_PATH /home/edwde/.local/micromamba/envs/cxx/)
 add_definitions(-DGLFW_INCLUDE_NONE)
 find_package(glfw3 REQUIRED)
 find_package(glad  REQUIRED)
@@ -21,8 +20,12 @@ add_executable(
     line.glsl
     shadowmap.glsl
 )
+target_link_directories(
+    ${PROJECT_NAME} PRIVATE
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_PREFIX_PATH}/lib
+)
 target_link_libraries(${PROJECT_NAME} glfw glad dl)
-target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 add_library(Module SHARED module.cpp ikrig.cpp common.cpp common.h)
 target_include_directories(Module PUBLIC ${CMAKE_PREFIX_PATH}/include)
