fix bug btMotionState

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -3,8 +3,7 @@ project(AnimationPlayer)
 
 include(../build/conan_toolchain.cmake)
 include_directories(${CMAKE_INCLUDE_PATH})
-find_package(PhysX REQUIRED)
-# find_package(Bullet REQUIRED)
+find_package(Bullet REQUIRED)
 
 set(CMAKE_PREFIX_PATH /home/edwde/.local/micromamba/envs/cxx/)
 add_definitions(-DGLFW_INCLUDE_NONE)
@@ -13,8 +12,19 @@ find_package(glad  REQUIRED)
 find_package(glm   REQUIRED)
 find_package(Boost REQUIRED)
 
+link_directories(
+    ${CMAKE_LIBRARY_PATH}
+)
+link_libraries(
+    BulletSoftBody
+    Bullet3Common
+    BulletDynamics
+    BulletCollision
+    LinearMath
+)
+
 add_executable(
-    ${PROJECT_NAME}
+    AnimationPlayer
     main.cpp
     base.glsl
     base.frag
@@ -22,29 +32,41 @@ add_executable(
     shadowmap.glsl
 )
 target_link_directories(
-    ${PROJECT_NAME} PRIVATE
+    AnimationPlayer PRIVATE
     ${CMAKE_CURRENT_BINARY_DIR}
     ${CMAKE_PREFIX_PATH}/lib
-    ${CMAKE_LIBRARY_PATH}
-)
-target_link_libraries(${PROJECT_NAME} glfw glad dl pthread
-    # BulletSoftBody Bullet3Common BulletDynamics BulletCollision LinearMath
-)
-
-add_library(Module SHARED module.cpp ikrig.cpp common.cpp common.h)
-target_include_directories(Module PUBLIC ${CMAKE_PREFIX_PATH}/include)
-target_link_directories(
-    Module PRIVATE
-    ${CMAKE_LIBRARY_PATH}
 )
 target_link_libraries(
-    Module
-    # PhysXPvdSDK
-    # PhysXVehicle
-    # PhysXCharacterKinematic
-    # PhysXCooking
-    PhysX
-    PhysXExtensions
-    PhysXCommon
-    PhysXFoundation
+    AnimationPlayer
+    glfw glad dl
+    # Module
+    Static
+)
+
+add_library(Static
+    Geometry.cpp
+)
+# target_include_directories(
+# )
+# target_link_directories(
+# )
+# target_link_libraries(
+# )
+
+add_library(
+    Module SHARED
+    module.cpp
+    ikrig.cpp common.cpp common.h
+)
+target_include_directories(
+    Module PRIVATE
+    ${CMAKE_PREFIX_PATH}/include
+)
+target_link_directories(
+    Module PRIVATE
+    ${CMAKE_CURRENT_BINARY_DIR}
+)
+target_link_libraries(
+    Module PRIVATE
+    Static
 )
