|bvh to render prims

--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -4,6 +4,7 @@ project(AnimationPlayer)
 include(../build/conan_toolchain.cmake)
 include_directories(${CMAKE_INCLUDE_PATH})
 find_package(Bullet REQUIRED)
+find_package(recastnavigation REQUIRED)
 
 set(CMAKE_PREFIX_PATH /home/edwde/.local/micromamba/envs/cxx/)
 add_definitions(-DGLFW_INCLUDE_NONE)
@@ -12,8 +13,12 @@ find_package(glad  REQUIRED)
 find_package(glm   REQUIRED)
 find_package(Boost REQUIRED)
 
+include_directories(
+    ${CMAKE_PREFIX_PATH}/include
+)
 link_directories(
     ${CMAKE_LIBRARY_PATH}
+    ${CMAKE_PREFIX_PATH}/lib
 )
 link_libraries(
     BulletSoftBody
@@ -34,33 +39,24 @@ add_executable(
 target_link_directories(
     AnimationPlayer PRIVATE
     ${CMAKE_CURRENT_BINARY_DIR}
-    ${CMAKE_PREFIX_PATH}/lib
 )
 target_link_libraries(
     AnimationPlayer
     glfw glad dl
-    # Module
     Static
+    # Module
 )
 
 add_library(Static
     Geometry.cpp
+    common.cpp
+    common.h
 )
-# target_include_directories(
-# )
-# target_link_directories(
-# )
-# target_link_libraries(
-# )
 
 add_library(
     Module SHARED
     module.cpp
-    ikrig.cpp common.cpp common.h
-)
-target_include_directories(
-    Module PRIVATE
-    ${CMAKE_PREFIX_PATH}/include
+    ikrig.cpp
 )
 target_link_directories(
     Module PRIVATE
